[package]
name = "lob_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "lob_processor"
path = "src/lib.rs"

[[bin]]
name = "lob_processor"
path = "src/main.rs"

[[bench]]
name = "lob_bench"
harness = false
path = "benches/lob_bench.rs"

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5"
memmap2 = "0.9"
fnv = "1.0"
crossbeam = "0.8"
socket2 = "0.6.0"
core_affinity = "0.8"
libc = "0.2"


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.8"
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3